# c-aces

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  aces_encrypt_decrypt.c  example1.c
lib/: Aces-internal.h  Aces.h  Arithmetic.h  Channel.h  Common.h  Matrix.h  Operations.h  Polynomial.h
src/: Aces-internal.c  Aces.c  Channel.c  Common.c  Matrix.c  Operations.c  Polynomial.c
tests/: CMakeLists.txt  aces-internal-test.c  aces-internal-test.h  channel-test.c  channel-test.h  common-test.c  common-test.h  main-test.c  matrix-test.c  matrix-test.h  polynomial-test.c  polynomial-test.h
